--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,3 +1,4 @@
+/* En tu archivo Contact.module.css */
 @import "../../vars.css";
 
 .container {
@@ -5,23 +6,56 @@
   margin-top: 120px;
   background-color: var(--color-secondary);
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: row; /* Cambiado a 'column' para que el formulario aparezca debajo */
+  align-items: center; /* Centrar elementos en el eje transversal */
   width: 100vw;
   padding: 58px 10%;
   gap: 10px;
 }
 
 .text h2 {
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 700;
-  letter-spacing: 4px;
+  letter-spacing: 2px;
+  margin-bottom: 20px; /* Añadido un espacio debajo de h2 */
 }
 
 .text p {
-  font-size: 40px;
+  font-size: 20px; /* Cambiado a un tamaño de letra más pequeño */
   font-weight: 400;
   letter-spacing: 2px;
+}
+
+.formContainer {
+  max-width: 400px;
+  margin: 0 auto;
+  border: 2px solid var(--color-border);
+  border-radius: 10px;
+  background: linear-gradient(90deg, #57a3bc 0%, #388962 100%);
+  box-shadow: 0 16px 14px 0 #042d21;
+  padding: 20px;
+
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+}
+
+button {
+  background: linear-gradient(90deg, #195646 0%, #52d797 100%);
+  box-shadow: 0 16px 14px 0 #042d21;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 .links {
@@ -29,19 +63,19 @@
   flex-direction: column;
   align-items: flex-start;
   list-style: none;
-  gap: 26px;
+  gap: 10px; /* Espacio entre enlaces */
 }
 
 .link {
   display: flex;
   align-items: center;
-  gap: 25px;
+  gap: 10px; /* Ajustado el espacio entre el icono y el enlace */
 }
 
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: 30px;
+  font-size: 17px; /* Cambiado a un tamaño de letra más pequeño */
   font-weight: 400;
   letter-spacing: 1.5px;
 }
@@ -59,6 +93,6 @@
   }
 
   .links {
-    align-items: center;
+    align-items: flex-start; /* Alineados a la izquierda en dispositivos móviles */
   }
 }
