--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,4 +1,3 @@
-/* En tu archivo Contact.module.css */
 @import "../../vars.css";
 
 .container {
@@ -6,8 +5,8 @@
   margin-top: 120px;
   background-color: var(--color-secondary);
   display: flex;
-  flex-direction: row; /* Cambiado a 'column' para que el formulario aparezca debajo */
-  align-items: center; /* Centrar elementos en el eje transversal */
+  flex-direction: row; 
+  align-items: center; 
   width: 100vw;
   padding: 58px 10%;
   gap: 10px;
@@ -17,11 +16,11 @@
   font-size: 60px;
   font-weight: 700;
   letter-spacing: 2px;
-  margin-bottom: 20px; /* Añadido un espacio debajo de h2 */
+  margin-bottom: 20px; 
 }
 
 .text p {
-  font-size: 20px; /* Cambiado a un tamaño de letra más pequeño */
+  font-size: 20px;
   font-weight: 400;
   letter-spacing: 2px;
 }
@@ -56,6 +55,8 @@ button {
   padding: 10px 15px;
   border-radius: 10px;
   cursor: pointer;
+  display: block;
+  margin: 0 auto;
 }
 
 .links {
@@ -69,15 +70,22 @@ button {
 .link {
   display: flex;
   align-items: center;
-  gap: 10px; /* Ajustado el espacio entre el icono y el enlace */
+  gap: 10px; 
 }
 
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: 17px; /* Cambiado a un tamaño de letra más pequeño */
+  font-size: 17px; 
   font-weight: 400;
   letter-spacing: 1.5px;
+}
+
+.successMessage {
+  color: #52d797; 
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 830px) {
@@ -93,6 +101,6 @@ button {
   }
 
   .links {
-    align-items: flex-start; /* Alineados a la izquierda en dispositivos móviles */
+    align-items: flex-start; 
   }
 }
