--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,3 +1,4 @@
+/* En tu archivo Contact.module.css */
 @import "../../vars.css";
 
 .container {
@@ -5,21 +6,28 @@
   margin-top: 120px;
   background-color: var(--color-secondary);
   display: flex;
-  flex-direction: row; 
-  align-items: center; 
+  flex-direction: column;
+  align-items: center;
   width: 100vw;
   padding: 58px 10%;
   gap: 10px;
 }
 
 .text h2 {
-  font-size: 60px;
+  color: var(--color-text);
+  margin: 25px 0px;
+  text-align: center;
+  font-size: 35px;
   font-weight: 700;
-  letter-spacing: 2px;
-  margin-bottom: 20px; 
+  letter-spacing: 1.75px;
+  text-transform: uppercase;
 }
 
 .text p {
+  margin: 15px;
+  color:white;
+  font-family: var(--font-roboto);
+  text-align: center;
   font-size: 20px;
   font-weight: 400;
   letter-spacing: 2px;
@@ -33,7 +41,6 @@
   background: linear-gradient(90deg, #57a3bc 0%, #388962 100%);
   box-shadow: 0 16px 14px 0 #042d21;
   padding: 20px;
-
 }
 
 label {
@@ -63,26 +70,27 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-end; /* Alineados a la derecha */
   list-style: none;
-  gap: 10px; /* Espacio entre enlaces */
+  gap: 10px;
 }
 
 .link {
   display: flex;
   align-items: center;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .link a {
   color: var(--color-text);
   text-decoration: none;
-  font-size: 17px; 
+  font-size: 17px;
   font-weight: 400;
   letter-spacing: 1.5px;
 }
 
 .successMessage {
-  color: #52d797; 
+  color: #52d797;
   font-size: 18px;
   font-weight: 600;
   margin-top: 10px;
@@ -101,6 +109,7 @@ button {
   }
 
   .links {
-    align-items: flex-start; 
+    align-items: flex-start;
+    justify-content: flex-start; /* Alineados a la izquierda en dispositivos móviles */
   }
 }
